src/objects/QIPP_Benefit__c.object
<CustomObject>
    <description>Benefit Monetization for Projects</description>
    <fields>
        <fullName>Achieved_Benefit_End__c</fullName>
        <description>This is String date required in Detail page of benifit</description>
        <label>Achieved Benefit End</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achieved_Benefit_Period_Weeks__c</fullName>
        <label>Achieved Benefit Period (Weeks)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Benefit_Start__c</fullName>
        <description>This is String date required in Detail page of benifit</description>
        <label>Achieved Benefit Start</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Achieved_Conversion_Rate__c</fullName>
        <label>Achieved Conversion Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_End_Date__c</fullName>
        <label>Achieved Benefit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Achieved_Financial_Automatic_Amount__c</fullName>
        <label>Achieved</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Financial_Manual_Amount__c</fullName>
        <label>Achieved</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Financial_Savings_Total__c</fullName>
        <label>Achieved (k€)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Operational_Automatic_Amount__c</fullName>
        <label>Achieved</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Operational_Manual_Amount__c</fullName>
        <label>Achieved</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Operational_Savings_Total__c</fullName>
        <label>Achieved (k€)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Projected_Savings_Total__c</fullName>
        <label>Achieved</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Quantity__c</fullName>
        <label>Performance Quantity (Achieved To-Date)</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Rate__c</fullName>
        <label>Achieved Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Realized_Savings_Total__c</fullName>
        <label>Achieved</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Achieved_Start_Date__c</fullName>
        <label>Achieved Benefit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Act_KPI_Improvement_k__c</fullName>
        <label>Achieved Operational Savings (k€)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Actual_Benefit_Start__c</fullName>
        <label>Achieved Benefit Start</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Actual_CoPQ_Reduction_k__c</fullName>
        <label>Achieved Financial Savings (k€)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Actual_Revenue_Increase__c</fullName>
        <label>Actual Revenue Increase (k€)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Baseline_Period_weeks__c</fullName>
        <label>Baseline Period (weeks)</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_Quantity__c</fullName>
        <label>Baseline Quantity</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_Rate_N__c</fullName>
        <label>Baseline Rate</label>
        <precision>13</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Baseline_Rate__c</fullName>
        <formula>if( (Baseline_Period_weeks__c &gt; 0  &amp;&amp;  ISPICKVAL(Type_of_Measure__c, &apos;Distributed Amount&apos;) ) ,  Baseline_Quantity__c / Baseline_Period_weeks__c , Baseline_Quantity__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Baseline Rate</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Basis__c</fullName>
        <label>Basis</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Benefit_Amount_Achieved_Future_k__c</fullName>
        <label>Validation Amount (Achieved+Future) (k€)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Operational_Achieved_Future_k__c</fullName>
        <label>Validation Amount (Achieved+Future) (k€)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Override_Status__c</fullName>
        <label>Benefit Override Status</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Benefit_Projected_Achieved_Future_k__c</fullName>
        <label>Projected Validation Amount(Ach+Fut)(k€)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Realized_Achieved_Future_k__c</fullName>
        <label>Validation Amount (Achieved+Future) (k€)</label>
        <precision>17</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Benefit_Type__c</fullName>
        <inlineHelpText>The default Benefit Type will auto-populate this field. To change the Benefit Type select the appropriate type.</inlineHelpText>
        <label>Benefit Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Business_Line__c</fullName>
        <label>Business Line</label>
        <picklist>
            <controllingField>Improvement_Measure__c</controllingField>
            <picklistValues>
                <fullName>GSM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LTE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>WCDMA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>OSS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PaCo</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VCM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>VIPT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PLATFORMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>N/A</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Directional_Indicator__c</fullName>
        <label>Directional Indicator</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Dummy__c</fullName>
        <label>Dummy</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email_BC_Mentor__c</fullName>
        <label>Email BC Mentor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_BU_MBB__c</fullName>
        <label>Email BU MBB</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_FinanceApprover__c</fullName>
        <label>Email FinanceApprover</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_GlobalMBB__c</fullName>
        <label>Email GlobalMBB</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Project_Lead__c</fullName>
        <label>Email Project Lead</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Email_Sponsor__c</fullName>
        <label>Email Sponsor</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Financial_Type__c</fullName>
        <label>Financial Type</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Future_Benefit_Period_Weeks__c</fullName>
        <label>Future Benefit Period (Weeks)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Conversion_Rate__c</fullName>
        <label>Future Conversion Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_End_Date__c</fullName>
        <label>Future Benefit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Future_Financial_Automatic_Amount__c</fullName>
        <label>Future</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Financial_Manual_Amount__c</fullName>
        <label>Future</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Financial_Savings_Total__c</fullName>
        <label>Future (k€)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Operational_Automatic_Amount__c</fullName>
        <label>Future</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Operational_Manual_Amount__c</fullName>
        <label>Future</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Operational_Savings_Total__c</fullName>
        <label>Future (k€)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Projected_Savings_Total__c</fullName>
        <label>Future</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Quantity__c</fullName>
        <label>Performance Quantity (Future Period)</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Rate__c</fullName>
        <label>Future Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Realized_Savings_Total__c</fullName>
        <label>Future</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Future_Start_Date__c</fullName>
        <label>Future Benefit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Imp_Plan_Planned_KPI_Improvement_k__c</fullName>
        <label>Planned Operational Savings</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Impacted_P_L_Line__c</fullName>
        <label>Impacted_P_L_Line</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ImprovementMeasure_Brief_Description__c</fullName>
        <inlineHelpText>The default Description will auto-populate this field. You may also add a new Description by entering the new value in this field.</inlineHelpText>
        <label>Brief Description</label>
        <length>500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Improvement_Measure_Grouping__c</fullName>
        <label>Improvement Measure Grouping</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvement_Measure_KPI__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Improvement Measure (KPI)</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>QIPP_Benefit_Conversion_Table__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>QIPP_Benefit_Conversion_Table__c</referenceTo>
        <relationshipLabel>Benefits (Improvement Measure (KPI))</relationshipLabel>
        <relationshipName>Improvement_Measure_KPI</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Improvement_Measure_Name__c</fullName>
        <inlineHelpText>The recommendation is to use the same improvement measures defined in the project or project charter.</inlineHelpText>
        <label>Improvement Measure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Improvement_Measure__c</fullName>
        <label>Improvement Measure</label>
        <picklist>
            <picklistValues>
                <fullName>NCDR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Internal Failures</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Program Overrun due to Quality Issues</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Warranties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Retrofit</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>E&amp;O</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Penalties</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NCC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Additional HW and/or SW</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Improvement_Plan_Planned_CoPQ_Reduction__c</fullName>
        <label>Planned Financial Savings (k€)</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Improvment_Target_Performance_Quantity__c</fullName>
        <label>Target Performance Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Invoke_Benefit_Override_Approve__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <label>Invoke Benefit Override Approve</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoke_Benefit_Override_Reject__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <label>Invoke Benefit Override Reject</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoke_Benefit_Override_Reset__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <label>Invoke Benefit Override Reset</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Invoke_Benefit_Override__c</fullName>
        <defaultValue>&apos;No&apos;</defaultValue>
        <label>Invoke Benefit Override</label>
        <length>3</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Benefit_End__c</fullName>
        <description>This is String date required in Detail page of benifit</description>
        <label>Planned Benefit End</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Benefit_Period_Weeks__c</fullName>
        <label>Planned Benefit Period (Weeks)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Benefit_Start__c</fullName>
        <description>This is String date required in Detail page of benifit</description>
        <label>Planned Benefit Start</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Conversion_Rate__c</fullName>
        <label>Planned Conversion Rate</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_End_Date__c</fullName>
        <label>Planned Benefit End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Financial_Automatic_Amount__c</fullName>
        <label>Planned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Financial_Manual_Amount__c</fullName>
        <label>Planned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Financial_Savings_Total__c</fullName>
        <label>Planned (k€)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Operational_Automatic_Amount__c</fullName>
        <label>Planned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Operational_Manual_Amount__c</fullName>
        <label>Planned</label>
        <precision>10</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Operational_Savings_Total__c</fullName>
        <label>Planned (k€)</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Projected_Savings_Total__c</fullName>
        <label>Planned</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Quanity__c</fullName>
        <label>Performance Quantity (Planned)</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Rate__c</fullName>
        <label>Planned Rate</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Realized_Savings_Total__c</fullName>
        <label>Planned</label>
        <precision>11</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Planned_Revenue_Increase__c</fullName>
        <label>Planned Revenue Increase (k€)</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Planned_Start_Date__c</fullName>
        <label>Planned Benefit Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Planned_Type_of_Measure__c</fullName>
        <label>Type of Measure (Time Period)</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Portfolio_Name__c</fullName>
        <label>Portfolio Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Charter_Goal_Statement__c</fullName>
        <inlineHelpText>If not already described elsewhere, provide additional relevant details regarding the KPI/PI chosen to quantify the benefit in QIPP.</inlineHelpText>
        <label>KPI / PI Details</label>
        <length>1500</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Project_ID__c</fullName>
        <label>Project ID</label>
        <referenceTo>QIPP_Project__c</referenceTo>
        <relationshipName>Benefits</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Project_Lead__c</fullName>
        <label>Project Lead</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name_Display__c</fullName>
        <label>Project Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Name__c</fullName>
        <formula>Project_ID__r.Project_Name_Succinct__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Project Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Project_Number__c</fullName>
        <label>Project Number</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Benefit_End__c</fullName>
        <description>This is String date required in Detail page of benifit</description>
        <label>Future Benefit End</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Remaining_Benefit_Start__c</fullName>
        <description>This is String date required in Detail page of benifit</description>
        <label>Future Benefit Start</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Revised_Forecast_Benefit_Period_Weeks__c</fullName>
        <label>Revised_Forecast Benefit Period (Weeks)</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revised_Forecast_Quanity__c</fullName>
        <label>Performance Quantity (R_Forecast Period)</label>
        <precision>10</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Revised_Forecast_Type_of_Measure__c</fullName>
        <label>Type of Measure (Time Period)</label>
        <picklist>
            <picklistValues>
                <fullName>Weekly Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Distributed Amount</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Selected_Business_Line__c</fullName>
        <label>Selected Business Line</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Benefit_Achieved_Amount__c</fullName>
        <formula>Achieved_Financial_Savings_Total__c + Achieved_Operational_Savings_Total__c +  Achieved_Projected_Savings_Total__c + Achieved_Realized_Savings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Benefit Achieved Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Benefit_Future_Amount__c</fullName>
        <formula>Future_Financial_Savings_Total__c + Future_Operational_Savings_Total__c + Future_Projected_Savings_Total__c + Future_Realized_Savings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Benefit Future Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Benefit_Planned_Amount__c</fullName>
        <formula>Planned_Operational_Savings_Total__c + Planned_Financial_Savings_Total__c + Planned_Realized_Savings_Total__c + Planned_Projected_Savings_Total__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Benefit Planned Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Benefit_Validation_Amount__c</fullName>
        <formula>Benefit_Amount_Achieved_Future_k__c + Benefit_Operational_Achieved_Future_k__c + Benefit_Projected_Achieved_Future_k__c + Benefit_Realized_Achieved_Future_k__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Total Benefit Validation Amount</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Type_of_Measure__c</fullName>
        <label>Type of Measure (Time Period)</label>
        <picklist>
            <picklistValues>
                <fullName>Distributed Amount</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Monthly Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Weekly Rate</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Quarterly Rate</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Unit_of_Measure__c</fullName>
        <inlineHelpText>The default Unit of Measure will auto-populate this field.  To change the Unit of Measure click on the cell and select from the drop-down list.  You may also add a new Improvement Measure by entering the new value in this field.</inlineHelpText>
        <label>Unit of Measure</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>QIPP Benefit</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{0000}</displayFormat>
        <label>Benefit ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Benefits</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>